; ModuleID = '/home/carl/AnghaBench/zstd/tests/extr_paramgrill.c_freeBuffers.c'
source_filename = "/home/carl/AnghaBench/zstd/tests/extr_paramgrill.c_freeBuffers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @freeBuffers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @freeBuffers(i32 %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_4__, align 8
  %4 = bitcast %struct.TYPE_4__* %3 to { i32, i32* }*
  %5 = getelementptr inbounds { i32, i32* }, { i32, i32* }* %4, i32 0, i32 0
  store i32 %0, i32* %5, align 8
  %6 = getelementptr inbounds { i32, i32* }, { i32, i32* }* %4, i32 0, i32 1
  store i32* %1, i32** %6, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 1
  %8 = load i32*, i32** %7, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @free(i32 %12)
  br label %14

14:                                               ; preds = %10, %2
  %15 = bitcast %struct.TYPE_4__* %3 to { i32, i32* }*
  %16 = getelementptr inbounds { i32, i32* }, { i32, i32* }* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = getelementptr inbounds { i32, i32* }, { i32, i32* }* %15, i32 0, i32 1
  %19 = load i32*, i32** %18, align 8
  %20 = call i32 @freeNonSrcBuffers(i32 %17, i32* %19)
  ret void
}

declare dso_local i32 @free(i32) #1

declare dso_local i32 @freeNonSrcBuffers(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
